--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.94.1",
     "livekit-client": "^2.17.0",
     "next": "16.1.2",
     "react": "19.2.3",
