feat: Add PostgreSQL database layer with Prisma ORM
- Add PostgreSQL 16 service to docker-compose.yml with health checks
- Create Prisma schema with User, Meditation, Tag, ListeningSession, Favorite models
- Implement db.ts client singleton with pg adapter for Prisma 7
- Create seed.ts to populate initial tags and migrate existing meditations
- Update auth-config.ts to sync Zitadel users to database on login
- Update meditations API to query from database (with filesystem fallback)
- Add new /api/tags endpoint for tag filtering
- Update .env.example with database configuration
- Add Prisma scripts to package.json (db:migrate, db:seed, db:studio)

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,12 @@
 # Copy to .env.local and fill in values
 
 # ===================
+# Database (PostgreSQL)
+# ===================
+DATABASE_URL="postgresql://beacon:your_password@localhost:5432/harmonic_beacon?schema=public"
+DB_PASSWORD=                # Generate secure password
+
+# ===================
 # LiveKit (beacon audio streaming)
 # ===================
 NEXT_PUBLIC_LIVEKIT_URL=wss://live.altermundi.net
@@ -29,6 +35,9 @@ GO2RTC_INTERNAL_URL=http://go2rtc:1984
 NEXT_PUBLIC_GO2RTC_URL=http://localhost:1984/api
 
 # ===================
-# Meditation storage
+# File storage
 # ===================
 MEDITATIONS_STORAGE_PATH=/data/meditations
+UPLOADS_PATH=/data/uploads
+MAX_UPLOAD_SIZE_MB=100
+
