--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,45 @@
 # Harmonic Beacon - Production Docker Compose
-# Next.js app + go2rtc meditation streaming
+# Next.js app + go2rtc meditation streaming + PostgreSQL
 #
 # Usage:
 #   docker compose build
 #   docker compose up -d
 
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: harmonic-beacon-db
+    restart: unless-stopped
+    ports:
+      - "127.0.0.1:5432:5432"
+    environment:
+      - POSTGRES_USER=beacon
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=harmonic_beacon
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - beacon
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U beacon -d harmonic_beacon"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 512M
+        reservations:
+          cpus: '0.25'
+          memory: 128M
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+
   app:
     build: .
     container_name: harmonic-beacon
@@ -14,6 +48,7 @@ services:
       - "3003:3000"
     environment:
       - NODE_ENV=production
+      - DATABASE_URL=postgresql://beacon:${DB_PASSWORD}@postgres:5432/harmonic_beacon?schema=public
       - AUTH_SECRET=${AUTH_SECRET}
       - AUTH_ZITADEL_ID=${AUTH_ZITADEL_ID}
       - AUTH_ZITADEL_ISSUER=${AUTH_ZITADEL_ISSUER:-https://auth.altermundi.net}
@@ -24,11 +59,16 @@ services:
       - LIVEKIT_ROOM_NAME=${LIVEKIT_ROOM_NAME:-beacon}
       - GO2RTC_INTERNAL_URL=http://go2rtc:1984
       - MEDITATIONS_STORAGE_PATH=/data/meditations
+      - UPLOADS_PATH=/data/uploads
+      - MAX_UPLOAD_SIZE_MB=100
     volumes:
       - ${MEDITATIONS_PATH:-/mnt/raid1/harmonic-beacon/meditations}:/data/meditations:ro
+      - ${UPLOADS_PATH:-/mnt/raid1/harmonic-beacon/uploads}:/data/uploads
     networks:
       - beacon
     depends_on:
+      postgres:
+        condition: service_healthy
       go2rtc:
         condition: service_healthy
     healthcheck:
@@ -76,6 +116,9 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+
+volumes:
+  postgres_data:
 
 networks:
   beacon:
